# Nexus-Orchestrator

./: .gitignore  00_Session_Preamble.md  01_Simulation_Philosophy.md  03_Action_Primitive_Catalog.md  07_AI_Architect_Constitution.md  09_Merge_Plan.md  README.md  builder_output.json  pyproject.toml
cli/: main.py
config/: roles.json
constitutional_docs/: 02_Architecture_Template.md  04_Action_Contract_Spec.md  05_Organic_Decision_UX.md  06_Vision_Contract.md  08_Orchestration_Engine_Spec.md
orchestration/: __init__.py  architect.py  builder_dispatch.py  constitution.py  cost_tracker.py  decomposer.py  gate_manager.py  journal.py  lineage.py  models.py  project_state.py  review_engine.py
tests/: test_constitution.py  test_project_state.py  test_tier2.py  test_tier3.py  test_tier4.py  test_tier5.py  test_tier6.py  test_tier7.py
web/: __init__.py  app.py  dependencies.py  export.py  schemas.py  websocket.py
web/routes/: artifacts.py  costs.py  export.py  gates.py  lineage.py  projects.py
